# pyso-realm

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt  run_ruff.cmd  run_ruff.ps1
py_utils/: py_build.cmd  py_build.ps1  rpg_game.spec  rpg_game_default.spec  run_game.cmd  run_game.ps1  run_game_debug.cmd  run_game_debug.ps1
res/shader/: tiles.fs  tiles.vs
src/: rpg_game.py  rpg_logger.py
